syntax = "proto3";

package calculator;

option go_package = "./calculator/calculatorpb";

message Calculator{
  int32 first_number = 1;
  int32 second_number = 2;
}

message CalculatorRequest{
  Calculator calculator = 1;
}

message CalculatorResponse{
  int32 result = 1;
}
service CalculatorService{
  //Unary
  rpc Calculate(CalculatorRequest) returns(CalculatorResponse){};
}



